--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,7 +6,17 @@
 	
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1><%= user.name %><span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
+
+			<% if(user.role ==='student') { %> 
+
+			<h1><%= user.name %><span class="m_1">STUDENT</span></h1>
+
+			<% } else if(user.role ==='teacher') { %>
+
+			<h1><%= user.name %><span class="m_1">TEACHER</span></h1>
+
+			<% }  %>
+
 		</div>
 	</div>
 	
